[package]
name = "nano9_ink"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.16.1"
bevy_mod_scripting = { version = "0.16.0", optional = true }
bladeink = "1.2.1"
serde = "1.0.228"
thiserror = "2.0.17"

[features]
default = [ ]
scripting = [ "dep:bevy_mod_scripting", "bevy_mod_scripting/lua54" ]

[patch.crates-io]
bladeink = { path = "../blade-ink-rs/lib" }
